<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_circle"
        android:importantForAccessibility="no"
        android:padding="@dimen/dimen_24dp"
        android:src="@drawable/img_party_popper"
        app:layout_constraintBottom_toTopOf="@id/textViewHeadline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textViewHeadline"
        style="@style/TextHeaderStyle"
        android:layout_marginTop="@dimen/dimen_32dp"
        android:text="@string/order_accepted"
        app:layout_constraintBottom_toTopOf="@id/textViewDescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dimen_24dp"
        android:layout_marginTop="@dimen/dimen_24dp"
        android:gravity="center_horizontal"
        android:text="@string/order_accepted_message"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewHeadline" />

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/text_separator"
        app:layout_constraintBottom_toTopOf="@id/ll_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="@dimen/dimen_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_to_hotel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_48dp"
            android:layout_marginHorizontal="@dimen/dimen_16dp"
            android:layout_marginBottom="@dimen/dimen_16dp"
            android:backgroundTint="@color/blue_text"
            app:cardCornerRadius="@dimen/dimen_16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/sf_pro_display_medium"
                android:text="@string/super_text"
                android:textColor="@color/white" />
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>